change mongodb cluster

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_CLUSTER=mongodb+srv://prakash:MD8GREj5x0NTptFX@cluster0.fg71d.mongodb.net/group56Database?retryWrites=true&w=majority
+MONGODB_CLUSTER=mongodb+srv://prakash_93:nzdQ9yMSM6uWLxcM@cluster0.fg71d.mongodb.net/groupXDatabase?retryWrites=true&w=majority
